--- a/data/code/max_score.Rmd
+++ b/data/code/max_score.Rmd
@@ -2,7 +2,10 @@
 title: "Maximal score"
 author: "Isaac Verminck"
 date: "January 14, 2018"
-output: html_document
+output:
+  pdf_document: 
+    latex_engine: xelatex
+  html_document: default
 ---
 
 ```{r setup, include=FALSE, cache=TRUE}
